--- a/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
+++ b/frontend/src/app/internacao/formulario-unidades/components/cadastro-unidades/cadastro-unidades.component.html
@@ -66,7 +66,7 @@
                                 <div class="ui-g-6 ui-sm-12">
                                     <span class="ui-float-label">
                                         <p-dropdown
-                                            formControlName="ala"
+                                            formControlName="alaId"
                                             pTooltip="Selecione a ala da unidade funcional."
                                             [options]="alas"
                                             optionLabel="nome"
@@ -79,7 +79,7 @@
                                 <div class="ui-g-4 ui-sm-12">
                                     <span class="ui-float-label">
                                         <p-dropdown
-                                            formControlName="clinica"
+                                            formControlName="clinicaId"
                                             [options]="clinicas"
                                             optionLabel="nome"
                                             placeholder="Clínica"
